# Documentations

./: .gitignore  README.md
.github/workflows/: release.yml
Documentations Techniques/: 20201002_CGI_HUBEE_SFD_HUB_V1.2.2_Export.docx
Documentations Techniques/Certificats/: auth-hubee-numerique-gouv-fr-chain.pem  auth-hubee-numerique-gouv-fr.pem  auth.hubee.numerique.gouv.fr (2).crt  readme.md
Documentations Techniques/Swagger/: api_folder_v1.2.0.yaml  api_folder_v1.2.2.yaml  api_folder_v1.2.4.yaml  api_folder_v1.2.7.yaml  api_organization_v1.2.0.yaml  api_process_v1.2.0.yaml  api_process_v1.2.1.yaml  api_subscription_v1.2.0.yaml  api_subscription_v1.2.3.yaml  readme  release_note_v1.2.0.txt  release_note_v1.2.2.txt
Documentations Techniques/valise_générique/: informations_démarche (WIP).xlsx  mode_opératoire_Valise_generique.docx  workflow_demarche (WIP).xlsx  ~$readme_ALE.pptx
Documentations Techniques/valise_générique/COLLECTION/: Valise.json
Documentations Techniques/valise_générique/ENVIRONNEMENT/: environnement_bas.json  environnement_preprod.json
Documentations Techniques/valise_générique/JDD/CAF-contact/: coordonnees-allocataire.txt
Documentations Techniques/valise_générique/JDD/CERTDC/: ER20190860001_20190517_1512_DD.xml  ER20190860001_20190517_1512_VA.xml
Documentations Techniques/valise_générique/JDD/DEPOTDOSSIERPACS/: flux-pacs.xml
Documentations Techniques/valise_générique/JDD/DSG/: DSG.xml
SolutionSI/: API.py  HUBEE.py  README.md  api.py  config.py  config.toml  hubee_client.py  main.py  pyproject.toml  readme.md
(+25 files in other folders)
