[project]
name = "solutionsi"
version = "2.0.0"
authors = [
    {name = "data.gouv.fr", email = "opendatateam@data.gouv.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
lint = { extend-select = ["I"] } # ["I"] is to also sort imports with an isort rule
line-length = 100
